--- a/src/App.css
+++ b/src/App.css
@@ -51,6 +51,7 @@ ul {
   display: flex;
   gap: 1rem;
   flex-wrap: wrap;
+  justify-content: center;
 }
 .mobile-plan {
   background-color: #fff;
@@ -144,4 +145,10 @@ ul {
 }
 .radio-container svg {
   margin-right: 0.4rem;
+}
+
+@media screen and (max-width: 700px) {
+  :root {
+    font-size: 20px;
+  }
 }
